--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
     <script
       type="module"
-      src="https://unpkg.com/@coveo/atomic@0.7.0-alpha.33/dist/atomic/atomic.esm.js"
+      src="https://static.cloud.coveo.com/atomic/latest/atomic.esm.js"
     ></script>
     <link
       rel="stylesheet"
-      href="https://unpkg.com/@coveo/atomic@0.7.0-alpha.33/dist/atomic/themes/default.css"
+      href="https://static.cloud.coveo.com/atomic/latest/themes/default.css"
     />
     <script>
       (async () => {
@@ -26,7 +26,7 @@
         // Initialization
         await searchInterface.initialize({
           accessToken: "xx564559b1-0045-48e1-953c-3addd1ee4457",
-          organizationId: "searchuisamples"
+          organizationId: "searchuisamples",
         });
 
         // Trigger a first search
