update sort dropdown component

--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
           <div class="side-by-side-container">
             <atomic-query-summary></atomic-query-summary>
             <atomic-sort-dropdown>
-              <atomic-sort-criteria
+              <atomic-sort-expression
                 caption="relevance"
-                criteria="relevancy"
-              ></atomic-sort-criteria>
-              <atomic-sort-criteria
+                expression="relevancy"
+              ></atomic-sort-expression>
+              <atomic-sort-expression
                 caption="mostRecent"
-                criteria="date descending"
-              ></atomic-sort-criteria>
+                expression="date descending"
+              ></atomic-sort-expression>
             </atomic-sort-dropdown>
           </div>
 
