--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
   <body>
     <atomic-aria-live></atomic-aria-live>
-    <atomic-search-interface>
+    <atomic-search-interface fields-to-include="snrating,sncost">
       <atomic-search-layout>
         <div class="header-bg"></div>
         <atomic-layout-section section="search">
@@ -237,7 +237,7 @@
             <atomic-did-you-mean></atomic-did-you-mean>
           </atomic-layout-section>
           <atomic-layout-section section="results">
-            <atomic-result-list fields-to-include="snrating,sncost">
+            <atomic-result-list>
               <atomic-result-template>
                 <template>
                   <style>
