--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <script
       type="module"
-      src="https://static.cloud.coveo.com/atomic/v1/atomic.esm.js"
+      src="https://staticdev.cloud.coveo.com/atomic/v2/atomic.esm.js"
     ></script>
     <link
       rel="stylesheet"
-      href="https://static.cloud.coveo.com/atomic/v1/themes/coveo.css"
+      href="https://staticdev.cloud.coveo.com/atomic/v2/themes/coveo.css"
     />
     <script>
       (async () => {
@@ -130,7 +130,7 @@
 
   <body>
     <atomic-aria-live></atomic-aria-live>
-    <atomic-search-interface fields-to-include="snrating,sncost">
+    <atomic-search-interface fields-to-include='["snrating","sncost"]'>
       <atomic-search-layout>
         <div class="header-bg"></div>
         <atomic-layout-section section="search">
