--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <script
       type="module"
-      src="https://staticdev.cloud.coveo.com/atomic/v2/atomic.esm.js"
+      src="https://static.cloud.coveo.com/atomic/v2.1/atomic.esm.js"
     ></script>
     <link
       rel="stylesheet"
-      href="https://staticdev.cloud.coveo.com/atomic/v2/themes/coveo.css"
+      href="https://static.cloud.coveo.com/atomic/v2.1/themes/coveo.css"
     />
     <script>
       (async () => {
