--- a/index.html
+++ b/index.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
-    />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
     <title>Coveo Atomic</title>
 
-    <script
-      type="module"
-      src="https://static.cloud.coveo.com/atomic/v2.1/atomic.esm.js"
-    ></script>
-    <link
-      rel="stylesheet"
-      href="https://static.cloud.coveo.com/atomic/v2.1/themes/coveo.css"
-    />
+    <script type="module" src="https://static.cloud.coveo.com/atomic/v2.0/atomic.esm.js"></script>
+    <link rel="stylesheet" href="https://static.cloud.coveo.com/atomic/latest/themes/coveo.css">
     <script>
       (async () => {
         await customElements.whenDefined("atomic-search-interface");
@@ -138,54 +129,18 @@
         </atomic-layout-section>
         <atomic-layout-section section="facets">
           <atomic-facet-manager>
-            <atomic-category-facet
-              field="geographicalhierarchy"
-              label="World Atlas"
-              with-search
-            >
+            <atomic-category-facet field="geographicalhierarchy" label="World Atlas" with-search>
             </atomic-category-facet>
             <atomic-facet field="author" label="Authors"></atomic-facet>
             <atomic-facet field="language" label="Language"></atomic-facet>
-            <atomic-facet
-              field="objecttype"
-              label="Type"
-              display-values-as="link"
-            ></atomic-facet>
-            <atomic-facet
-              field="year"
-              label="Year"
-              display-values-as="box"
-            ></atomic-facet>
-            <atomic-numeric-facet
-              field="ytviewcount"
-              label="Youtube Views"
-              with-input="integer"
-            ></atomic-numeric-facet>
-            <atomic-numeric-facet
-              field="ytlikecount"
-              label="Youtube Likes"
-              display-values-as="link"
-            >
-              <atomic-numeric-range
-                start="0"
-                end="1000"
-                label="Unpopular"
-              ></atomic-numeric-range>
-              <atomic-numeric-range
-                start="1000"
-                end="8000"
-                label="Well liked"
-              ></atomic-numeric-range>
-              <atomic-numeric-range
-                start="8000"
-                end="100000"
-                label="Popular"
-              ></atomic-numeric-range>
-              <atomic-numeric-range
-                start="100000"
-                end="999999999"
-                label="Treasured"
-              ></atomic-numeric-range>
+            <atomic-facet field="objecttype" label="Type" display-values-as="link"></atomic-facet>
+            <atomic-facet field="year" label="Year" display-values-as="box"></atomic-facet>
+            <atomic-numeric-facet field="ytviewcount" label="Youtube Views" with-input="integer"></atomic-numeric-facet>
+            <atomic-numeric-facet field="ytlikecount" label="Youtube Likes" display-values-as="link">
+              <atomic-numeric-range start="0" end="1000" label="Unpopular"></atomic-numeric-range>
+              <atomic-numeric-range start="1000" end="8000" label="Well liked"></atomic-numeric-range>
+              <atomic-numeric-range start="8000" end="100000" label="Popular"></atomic-numeric-range>
+              <atomic-numeric-range start="100000" end="999999999" label="Treasured"></atomic-numeric-range>
             </atomic-numeric-facet>
             <atomic-numeric-facet field="sncost" label="Cost">
               <atomic-format-currency currency="CAD"></atomic-format-currency>
@@ -198,25 +153,11 @@
               <atomic-timeframe unit="quarter"></atomic-timeframe>
               <atomic-timeframe unit="year"></atomic-timeframe>
             </atomic-timeframe-facet>
-            <atomic-rating-facet
-              field="snrating"
-              label="Rating"
-              number-of-intervals="5"
-            >
+            <atomic-rating-facet field="snrating" label="Rating" number-of-intervals="5">
             </atomic-rating-facet>
-            <atomic-rating-range-facet
-              facet-id="snrating_range"
-              field="snrating"
-              label="Rating Range"
-              number-of-intervals="5"
-            >
+            <atomic-rating-range-facet facet-id="snrating_range" field="snrating" label="Rating Range" number-of-intervals="5">
             </atomic-rating-range-facet>
-            <atomic-color-facet
-              field="filetype"
-              label="Files"
-              number-of-values="6"
-              sort-criteria="occurrences"
-            ></atomic-color-facet>
+            <atomic-color-facet field="filetype" label="Files" number-of-values="6" sort-criteria="occurrences"></atomic-color-facet>
           </atomic-facet-manager>
         </atomic-layout-section>
         <atomic-layout-section section="main">
@@ -225,14 +166,8 @@
             <atomic-query-summary></atomic-query-summary>
             <atomic-refine-toggle></atomic-refine-toggle>
             <atomic-sort-dropdown>
-              <atomic-sort-expression
-                label="relevance"
-                expression="relevancy"
-              ></atomic-sort-expression>
-              <atomic-sort-expression
-                label="most-recent"
-                expression="date descending"
-              ></atomic-sort-expression>
+              <atomic-sort-expression label="relevance" expression="relevancy"></atomic-sort-expression>
+              <atomic-sort-expression label="most-recent" expression="date descending"></atomic-sort-expression>
             </atomic-sort-dropdown>
             <atomic-did-you-mean></atomic-did-you-mean>
           </atomic-layout-section>
@@ -287,87 +222,50 @@
                   </style>
                   <atomic-result-section-visual>
                     <atomic-result-icon class="icon"></atomic-result-icon>
-                    <img src="https://picsum.photos/350" class="thumbnail" />
+                    <img src="https://picsum.photos/350" class="thumbnail">
                   </atomic-result-section-visual>
                   <atomic-result-section-badges>
                     <atomic-field-condition must-match-sourcetype="Salesforce">
-                      <atomic-result-badge
-                        label="Salesforce"
-                        class="salesforce-badge"
-                      ></atomic-result-badge>
+                      <atomic-result-badge label="Salesforce" class="salesforce-badge"></atomic-result-badge>
                     </atomic-field-condition>
-                    <atomic-result-badge
-                      field="language"
-                      icon="https://raw.githubusercontent.com/Rush/Font-Awesome-SVG-PNG/master/black/svg/language.svg"
-                    ></atomic-result-badge>
+                    <atomic-result-badge field="language" icon="https://raw.githubusercontent.com/Rush/Font-Awesome-SVG-PNG/master/black/svg/language.svg"></atomic-result-badge>
                   </atomic-result-section-badges>
-                  <atomic-result-section-title
-                    ><atomic-result-link></atomic-result-link
-                  ></atomic-result-section-title>
+                  <atomic-result-section-title><atomic-result-link></atomic-result-link></atomic-result-section-title>
                   <atomic-result-section-title-metadata>
                     <atomic-field-condition class="field" if-defined="snrating">
-                      <atomic-result-rating
-                        field="snrating"
-                      ></atomic-result-rating>
+                      <atomic-result-rating field="snrating"></atomic-result-rating>
                     </atomic-field-condition>
-                    <atomic-field-condition
-                      class="field"
-                      if-not-defined="snrating"
-                    >
-                      <atomic-result-printable-uri
-                        max-number-of-parts="3"
-                      ></atomic-result-printable-uri>
+                    <atomic-field-condition class="field" if-not-defined="snrating">
+                      <atomic-result-printable-uri max-number-of-parts="3"></atomic-result-printable-uri>
                     </atomic-field-condition>
                   </atomic-result-section-title-metadata>
-                  <atomic-result-section-excerpt
-                    ><atomic-result-text field="excerpt"></atomic-result-text
-                  ></atomic-result-section-excerpt>
+                  <atomic-result-section-excerpt><atomic-result-text field="excerpt"></atomic-result-text></atomic-result-section-excerpt>
                   <atomic-result-section-bottom-metadata>
                     <atomic-result-fields-list>
                       <atomic-field-condition class="field" if-defined="author">
-                        <span class="field-label"
-                          ><atomic-text value="author"></atomic-text>:</span
-                        >
+                        <span class="field-label"><atomic-text value="author"></atomic-text>:</span>
                         <atomic-result-text field="author"></atomic-result-text>
                       </atomic-field-condition>
 
                       <atomic-field-condition class="field" if-defined="source">
-                        <span class="field-label"
-                          ><atomic-text value="source"></atomic-text>:</span
-                        >
+                        <span class="field-label"><atomic-text value="source"></atomic-text>:</span>
                         <atomic-result-text field="source"></atomic-result-text>
                       </atomic-field-condition>
 
-                      <atomic-field-condition
-                        class="field"
-                        if-defined="language"
-                      >
-                        <span class="field-label"
-                          ><atomic-text value="language"></atomic-text>:</span
-                        >
-                        <atomic-result-multi-value-text
-                          field="language"
-                        ></atomic-result-multi-value-text>
+                      <atomic-field-condition class="field" if-defined="language">
+                        <span class="field-label"><atomic-text value="language"></atomic-text>:</span>
+                        <atomic-result-multi-value-text field="language"></atomic-result-multi-value-text>
                       </atomic-field-condition>
 
-                      <atomic-field-condition
-                        class="field"
-                        if-defined="filetype"
-                      >
-                        <span class="field-label"
-                          ><atomic-text value="fileType"></atomic-text>:</span
-                        >
-                        <atomic-result-text
-                          field="filetype"
-                        ></atomic-result-text>
+                      <atomic-field-condition class="field" if-defined="filetype">
+                        <span class="field-label"><atomic-text value="fileType"></atomic-text>:</span>
+                        <atomic-result-text field="filetype"></atomic-result-text>
                       </atomic-field-condition>
 
                       <atomic-field-condition class="field" if-defined="sncost">
                         <span class="field-label">Cost:</span>
                         <atomic-result-number field="sncost">
-                          <atomic-format-currency
-                            currency="CAD"
-                          ></atomic-format-currency>
+                          <atomic-format-currency currency="CAD"></atomic-format-currency>
                         </atomic-result-number>
                       </atomic-field-condition>
 
