--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Coveo Atomic</title>
 
     <script type="module" src="https://static.cloud.coveo.com/atomic/v2.0/atomic.esm.js"></script>
-    <link rel="stylesheet" href="https://static.cloud.coveo.com/atomic/latest/themes/coveo.css">
+    <link rel="stylesheet" href="https://static.cloud.coveo.com/atomic/2.0/themes/coveo.css">
     <script>
       (async () => {
         await customElements.whenDefined("atomic-search-interface");
