--- a/index.html
+++ b/index.html
@@ -229,9 +229,11 @@
                     <atomic-field-condition must-match-sourcetype="Salesforce">
                       <atomic-result-badge label="Salesforce" class="salesforce-badge"></atomic-result-badge>
                     </atomic-field-condition>
-                    <atomic-field-condition class="field" if-defined="language">
-                      <atomic-result-badge icon="https://raw.githubusercontent.com/Rush/Font-Awesome-SVG-PNG/master/black/svg/language.svg"></atomic-result-badge>
-                    </atomic-field-condition>
+                    <atomic-result-badge
+                      icon="https://raw.githubusercontent.com/Rush/Font-Awesome-SVG-PNG/master/black/svg/language.svg"
+                    >
+                      <atomic-result-multi-value-text field="language"></atomic-result-multi-value-text>
+                    </atomic-result-badge>
                   </atomic-result-section-badges>
                   <atomic-result-section-title><atomic-result-link></atomic-result-link></atomic-result-section-title>
                   <atomic-result-section-title-metadata>
